--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.24",
     "@react-email/components": "^0.0.21",
+    "ai": "^3.2.16",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
